Fix image scaling issue on mobile (closes #392)

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -368,6 +368,7 @@ img
   img
     width: 100%
     display: block
+    object-fit: contain
 
   &.landscape
     max-width: 200px
